# mcp-server-deapi

./: .dockerignore  .env.example  .gitignore  AUTH.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  server.json
src/: auth.py  config.py  deapi_client.py  fastmcp_auth.py  middleware.py  oauth_endpoints.py  polling_manager.py  schemas.py  server_remote.py  utils.py
src/tools/: _price_helpers.py  audio.py  embedding.py  image.py  utility.py  video.py
tests/: __init__.py  conftest.py  smoke_test.py  test_middleware.py  test_price_helpers.py  test_tools.py  test_utils.py
